# JobFit

./: README.md  pyproject.toml  user_journey.md
src/backend/: main.py  utils.py
src/backend/core/: analyser.py  enhancer.py  llm.py  parser.py
src/backend/schemas/: analysis.py  cv.py  io.py  user_data.py
src/product/: user_journey.md
